// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WishlistButton stories snapshot > CustomStyling story renders and matches snapshot 1`] = `
<div
  data-wishlist-harness="true"
>
  <div
    class="flex items-center justify-center min-h-screen"
  >
    <div
      class="relative"
    >
      <button
        aria-label="Add to wishlist"
        class="absolute top-2 right-2 z-10 bg-background rounded-full p-1.5 shadow-md transition-all duration-200 ease-in-out border-0 hover:scale-110 hover:shadow-lg focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 disabled:opacity-60 disabled:cursor-not-allowed text-red-500 hover:text-red-600"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-heart w-5 h-5 transition-all duration-200 ease-in-out text-muted-foreground fill-none scale-100"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2 9.5a5.5 5.5 0 0 1 9.591-3.676.56.56 0 0 0 .818 0A5.49 5.49 0 0 1 22 9.5c0 2.29-1.5 4-3 5.5l-5.492 5.313a2 2 0 0 1-3 .019L5 15c-1.5-1.5-3-3.2-3-5.5"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`WishlistButton stories snapshot > Default story renders and matches snapshot 1`] = `
<div
  data-wishlist-harness="true"
>
  <div
    class="flex items-center justify-center min-h-screen"
  >
    <div
      class="relative"
    >
      <button
        aria-label="Add to wishlist"
        class="z-10 bg-background rounded-full p-1.5 shadow-md transition-all duration-200 ease-in-out border-0 hover:scale-110 hover:shadow-lg focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 disabled:opacity-60 disabled:cursor-not-allowed static top-auto right-auto"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-heart w-5 h-5 transition-all duration-200 ease-in-out text-muted-foreground fill-none scale-100"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2 9.5a5.5 5.5 0 0 1 9.591-3.676.56.56 0 0 0 .818 0A5.49 5.49 0 0 1 22 9.5c0 2.29-1.5 4-3 5.5l-5.492 5.313a2 2 0 0 1-3 .019L5 15c-1.5-1.5-3-3.2-3-5.5"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`WishlistButton stories snapshot > DifferentProducts story renders and matches snapshot 1`] = `
<div
  data-wishlist-harness="true"
>
  <div
    class="flex items-center justify-center min-h-screen"
  >
    <div
      class="relative"
    >
      <div
        class="grid grid-cols-2 gap-4"
      >
        <div
          class="p-4 border rounded-lg relative"
        >
          <h4
            class="font-medium mb-2"
          >
            Standard Product
          </h4>
          <p
            class="text-sm text-muted-foreground mb-2"
          >
            Basic product item
          </p>
          <p
            class="text-lg font-bold"
          >
            $29.99
          </p>
          <div
            class="absolute top-2 right-2"
          >
            <button
              aria-label="Add to wishlist"
              class="absolute top-2 right-2 z-10 bg-background rounded-full p-1.5 shadow-md transition-all duration-200 ease-in-out border-0 hover:scale-110 hover:shadow-lg focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 disabled:opacity-60 disabled:cursor-not-allowed"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-heart w-4 h-4 transition-all duration-200 ease-in-out text-muted-foreground fill-none scale-100"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M2 9.5a5.5 5.5 0 0 1 9.591-3.676.56.56 0 0 0 .818 0A5.49 5.49 0 0 1 22 9.5c0 2.29-1.5 4-3 5.5l-5.492 5.313a2 2 0 0 1-3 .019L5 15c-1.5-1.5-3-3.2-3-5.5"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="p-4 border rounded-lg relative"
        >
          <h4
            class="font-medium mb-2"
          >
            Featured Product
          </h4>
          <p
            class="text-sm text-muted-foreground mb-2"
          >
            Premium product item
          </p>
          <p
            class="text-lg font-bold"
          >
            $99.99
          </p>
          <div
            class="absolute top-2 right-2"
          >
            <button
              aria-label="Add to wishlist"
              class="absolute top-2 right-2 z-10 bg-background rounded-full p-1.5 shadow-md transition-all duration-200 ease-in-out border-0 hover:scale-110 hover:shadow-lg focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 disabled:opacity-60 disabled:cursor-not-allowed"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-heart w-4 h-4 transition-all duration-200 ease-in-out text-muted-foreground fill-none scale-100"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M2 9.5a5.5 5.5 0 0 1 9.591-3.676.56.56 0 0 0 .818 0A5.49 5.49 0 0 1 22 9.5c0 2.29-1.5 4-3 5.5l-5.492 5.313a2 2 0 0 1-3 .019L5 15c-1.5-1.5-3-3.2-3-5.5"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`WishlistButton stories snapshot > InWishlist story renders and matches snapshot 1`] = `
<div
  data-wishlist-harness="true"
>
  <div
    class="flex items-center justify-center min-h-screen"
  >
    <div
      class="relative"
    >
      <button
        aria-label="Add to wishlist"
        class="z-10 bg-background rounded-full p-1.5 shadow-md transition-all duration-200 ease-in-out border-0 hover:scale-110 hover:shadow-lg focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 disabled:opacity-60 disabled:cursor-not-allowed static top-auto right-auto"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-heart w-5 h-5 transition-all duration-200 ease-in-out text-muted-foreground fill-none scale-100"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2 9.5a5.5 5.5 0 0 1 9.591-3.676.56.56 0 0 0 .818 0A5.49 5.49 0 0 1 22 9.5c0 2.29-1.5 4-3 5.5l-5.492 5.313a2 2 0 0 1-3 .019L5 15c-1.5-1.5-3-3.2-3-5.5"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`WishlistButton stories snapshot > LargeSize story renders and matches snapshot 1`] = `
<div
  data-wishlist-harness="true"
>
  <div
    class="flex items-center justify-center min-h-screen"
  >
    <div
      class="relative"
    >
      <button
        aria-label="Add to wishlist"
        class="z-10 bg-background rounded-full p-1.5 shadow-md transition-all duration-200 ease-in-out border-0 hover:scale-110 hover:shadow-lg focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 disabled:opacity-60 disabled:cursor-not-allowed static top-auto right-auto"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-heart w-6 h-6 transition-all duration-200 ease-in-out text-muted-foreground fill-none scale-100"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2 9.5a5.5 5.5 0 0 1 9.591-3.676.56.56 0 0 0 .818 0A5.49 5.49 0 0 1 22 9.5c0 2.29-1.5 4-3 5.5l-5.492 5.313a2 2 0 0 1-3 .019L5 15c-1.5-1.5-3-3.2-3-5.5"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`WishlistButton stories snapshot > LoadingState story renders and matches snapshot 1`] = `
<div
  data-wishlist-harness="true"
>
  <div
    class="flex items-center justify-center min-h-screen"
  >
    <div
      class="relative"
    >
      <button
        aria-label="Add to wishlist"
        class="absolute top-2 right-2 z-10 bg-background rounded-full p-1.5 shadow-md transition-all duration-200 ease-in-out border-0 hover:scale-110 hover:shadow-lg focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 disabled:opacity-60 disabled:cursor-not-allowed opacity-50 cursor-not-allowed"
        disabled=""
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-heart w-5 h-5 transition-all duration-200 ease-in-out text-muted-foreground fill-none scale-100"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2 9.5a5.5 5.5 0 0 1 9.591-3.676.56.56 0 0 0 .818 0A5.49 5.49 0 0 1 22 9.5c0 2.29-1.5 4-3 5.5l-5.492 5.313a2 2 0 0 1-3 .019L5 15c-1.5-1.5-3-3.2-3-5.5"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`WishlistButton stories snapshot > SmallSize story renders and matches snapshot 1`] = `
<div
  data-wishlist-harness="true"
>
  <div
    class="flex items-center justify-center min-h-screen"
  >
    <div
      class="relative"
    >
      <button
        aria-label="Add to wishlist"
        class="z-10 bg-background rounded-full p-1.5 shadow-md transition-all duration-200 ease-in-out border-0 hover:scale-110 hover:shadow-lg focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 disabled:opacity-60 disabled:cursor-not-allowed static top-auto right-auto"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-heart w-4 h-4 transition-all duration-200 ease-in-out text-muted-foreground fill-none scale-100"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2 9.5a5.5 5.5 0 0 1 9.591-3.676.56.56 0 0 0 .818 0A5.49 5.49 0 0 1 22 9.5c0 2.29-1.5 4-3 5.5l-5.492 5.313a2 2 0 0 1-3 .019L5 15c-1.5-1.5-3-3.2-3-5.5"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`WishlistButton stories snapshot > WithVariant story renders and matches snapshot 1`] = `
<div
  data-wishlist-harness="true"
>
  <div
    class="flex items-center justify-center min-h-screen"
  >
    <div
      class="relative"
    >
      <button
        aria-label="Add to wishlist"
        class="z-10 bg-background rounded-full p-1.5 shadow-md transition-all duration-200 ease-in-out border-0 hover:scale-110 hover:shadow-lg focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 disabled:opacity-60 disabled:cursor-not-allowed static top-auto right-auto"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-heart w-5 h-5 transition-all duration-200 ease-in-out text-muted-foreground fill-none scale-100"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2 9.5a5.5 5.5 0 0 1 9.591-3.676.56.56 0 0 0 .818 0A5.49 5.49 0 0 1 22 9.5c0 2.29-1.5 4-3 5.5l-5.492 5.313a2 2 0 0 1-3 .019L5 15c-1.5-1.5-3-3.2-3-5.5"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
